style: Fix mui dataGrid-panel creating overflow

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -569,3 +569,7 @@ error [data-filepond-item-state*="error"] .filepond--item-panel,
 .MuiPaper-elevation {
 	max-height: 400px !important;
 }
+
+.MuiDataGrid-panel {
+	position: fixed !important;
+}
